--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
+
 plugins {
 	id 'org.springframework.boot' version '2.4.0'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 }
+apply plugin: 'groovy'
 
 group = 'com.demo'
 version = '0.0.1-SNAPSHOT'
@@ -16,9 +18,14 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter'
 	compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0-RC1'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.5.RELEASE'
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'//
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
+	compile 'org.codehaus.groovy:groovy-all:2.4.1'
 
+	testCompile group: 'org.springframework', name: 'spring-test', version: '5.2.11.RELEASE'
+	testCompile group: 'org.spockframework', name: 'spock-unitils', version: '1.0-groovy-2.4'
+	testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
+	testCompile group: 'cglib', name: 'cglib-nodep', version: '2.2.2'
 }
 
 test {
